--- a/views/layouts/auth_base.handlebars
+++ b/views/layouts/auth_base.handlebars
@@ -12,7 +12,7 @@
 <body>
   <div class="jw-main-navigation">
     <div class="jw-logo">
-      <img src="http://www.fillmurray.com/150/150" class="jw-logo" alt="logo" />
+      <img src="/images/utah_state_aggies.png" class="jw-logo" alt="logo" />
     </div>
     <div class="jw-navbar">
         <ul class="jw-navbar">
