--- a/public/css/tibbitts.css
+++ b/public/css/tibbitts.css
@@ -13,13 +13,20 @@ background-color: #63AFD0;
 
 .content {
   text-align: left;
-  margin-left: 12%;
-  margin-right: 12%;
+  margin-left: 10%;
+  margin-right: 10%;
   margin-top: 10%;
+}
+
+.imagecontent {
+  text-align: left;
+  margin-left: 8%;
+  margin-right: 8%;
 }
 
 .border {
   width: 306px;
+  height: 306px;
   border: solid 1px black;
   float: left;
   padding: 5px;
@@ -27,19 +34,41 @@ background-color: #63AFD0;
 }
 
 .buttonleft {
-  float: left;
-  padding: 5px;
-  margin: 5px;
-  margin-left: 20px;
+  position: absolute;
+  margin-top: 260px;
+  margin-left: 30px;
+  height: 30px;
+  width: 70px;
+  z-index: 1;
 }
 
 .buttonright {
-  float: right;
-  padding: 5px;
-  margin: 5px;
-  margin-right: 20px;
+  position: absolute;
+  margin-top: 260px;
+  margin-left: 210px;
+  height: 30px;
+  width: 70px;
+  z-index: 1;
 }
 
 .photosize {
+  /*position: relative;*/
   width: 95%;
+  display:inline-block;
+  position:relative;
+  z-index: 0;
+}
+
+.testfeed {
+  float: left;
+  margin: 20px;
+  height: 310px;
+  width: 310px;
+}
+
+.photo {
+  width: 310px;
+  height: 310px;
+  position: absolute;
+  z-index: 0;
 }
