Fixed some jQuery that should have been added on last commit

--- a/views/partials/feed.handlebars
+++ b/views/partials/feed.handlebars
@@ -2,7 +2,7 @@
   <div class="testfeed">
     <img src="{{this.images.standard_resolution.url}}" class="photo" />
     <!-- <p>Likes: {{this.likes.count}} Comments: {{this.comments.count}} </p> -->
-    <button class="buttonleft">Love It!</button>
-    <button class="buttonright">Hate It!</button>
+    <button class="buttonleft">Like</button>
+    <button class="buttonright">Comment</button>
   </div>
 {{/each}}
