--- a/public/css/global.css
+++ b/public/css/global.css
@@ -86,7 +86,7 @@ a.jw-navbar {
   margin-right:20%;
   margin-bottom: 0;
   padding:0;
-  height:4%;
+  height: 25px;
   width: 50%;
   font-style:italic;
   font-family: sans-serif;
