--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,8 @@
 <div class="content">
   <h3>{{pageintro}}</h3>
+  <img src="{{this.images.standard_resolution.url}}" class="photo" />
+  <!-- <img src="{{this.user.profile_picture}}" class="photo" alt="profile pic" /> -->
+  <img src="/images/utah_state_aggies.png" alt="" />
 </div>
 <div class="imagecontent">
   {{>feed}}
