--- a/views/layouts/auth_base.handlebars
+++ b/views/layouts/auth_base.handlebars
@@ -18,7 +18,7 @@
         <ul class="jw-navbar">
           <div class="clear-fix"></div>
           <li class="jw-navbar">
-            <a class="jw-navbar" href="home.html"><img src="/images/home.png" class="homeicon" alt="home" /></a>
+            <a class="jw-navbar" href="/user/dashboard"><img src="/images/home.png" class="homeicon" alt="home" /></a>
           </li>
           <li class="jw-navbar">
             <form>
@@ -26,10 +26,10 @@
             </form>
           </li>
           <li>
-            <a href="#"><img src="http://www.clipartbest.com/cliparts/4cb/K7G/4cbK7Gggi.png" class="jw-search" alt="search" /></a>
+            <a href="/user/search"><img src="http://www.clipartbest.com/cliparts/4cb/K7G/4cbK7Gggi.png" class="jw-search" alt="search" /></a>
           </li>
         <li class="profileOne">
-          <a class="profileOne" href="profile.html"><img src="/images/Empty_Profile_picture.png" class="prof" alt="prof" /></a>
+          <a class="profileOne" href="/user/profile"><img src="{{user.profile_picture}}" class="prof" alt="prof" /></a>
         </li>
         </ul>
       </div>
