--- a/views/partials/feed.handlebars
+++ b/views/partials/feed.handlebars
@@ -1,8 +1,9 @@
 {{#each feed}}
-  <div class="testfeed">
+  <div class="testfeed {{this.id}}">
     <img src="{{this.images.standard_resolution.url}}" class="photo" />
     <!-- <p>Likes: {{this.likes.count}} Comments: {{this.comments.count}} </p> -->
-    <button class="buttonleft">Like</button>
-    <button class="buttonright">Comment</button>
+    <button class="buttonleft {{this.id}}">Like</button>
+    <button class="buttonright {{this.id}}">Comment</button>
+    <input class="comment">
   </div>
 {{/each}}
